--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,25 +1,28 @@
 ---
-import Header from './components/Header.astro';
-import Footer from './components/Footer.astro';
-const { title } = Astro.props
+import Header from "./components/Header.astro";
+import Footer from "./components/Footer.astro";
+const { title } = Astro.props;
 ---
+
 <html lang="ja" data-theme="emerald">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-		<Header/>
-    <nav>
-      <a href="#">ホーム</a>
-      <a href="#">ブログ</a>
-      <a href="#">お問い合わせ</a>
-    </nav>
-    <h1>{title}</h1>
-
-    <article>
-      <slot /> <!-- ここにコンテンツが挿入される -->
-    </article>
+    <Header />
+    <div class="grid grid-cols-4 gap-4 min-h-screen">
+      <h1>{title}</h1>
+      <div class="col-start-1 col-span-1">
+        <slot name="aside1" /><!-- ここにサイドバーが挿入される -->
+      </div>
+      <div class="col-start-2 col-span-2 row-span-full">
+        <slot /><!-- ここにコンテンツが挿入される -->
+      </div>
+      <div class="col-span-1">
+        <slot name="aside2" /><!-- ここにサイドバーが挿入される -->
+      </div>
+    </div>
     <Footer />
   </body>
 </html>
