--- a/src/layouts/components/Header.astro
+++ b/src/layouts/components/Header.astro
@@ -1,21 +1,24 @@
-<div class="navbar bg-base-100">
+<div class="navbar bg-gray-200 sticky top-0 z-50 opacity-95">
   <div class="flex-1">
-    <a class="btn btn-ghost text-xl">daisyUI</a>
+    <a class="btn btn-ghost text-xl">Nakajhi Blog</a>
   </div>
   <div class="flex-none">
-    <ul class="menu menu-horizontal px-1">
-      <li><a>Link</a></li>
-      <li>
-        <details>
-          <summary>
-            Parent
-          </summary>
-          <ul class="p-2 bg-base-100 rounded-t-none">
-            <li><a>Link 1</a></li>
-            <li><a>Link 2</a></li>
-          </ul>
-        </details>
-      </li>
-    </ul>
+    <nav>
+      <ul class="menu menu-horizontal px-1">
+        <li><a href="/">ホーム</a></li>
+        <li><a href="/posts/1">投稿</a></li>
+        <li><a href="/contact">お問い合わせ</a></li>
+
+        <!-- <li>
+          <details>
+            <summary> Parent </summary>
+            <ul class="p-2 bg-base-100 rounded-t-none">
+              <li><a>Link 1</a></li>
+              <li><a>Link 2</a></li>
+            </ul>
+          </details>
+        </li> -->
+      </ul>
+    </nav>
   </div>
 </div>
