--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -2,6 +2,6 @@
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout title="お問い合わせ">
-  <div>pxページ</div>
+<Layout title="Profile">
+  <div>profileページ</div>
 </Layout>
