--- a/src/layouts/components/Header.astro
+++ b/src/layouts/components/Header.astro
@@ -1,12 +1,11 @@
 <div class="navbar bg-gray-200 sticky top-0 z-50 opacity-95">
   <div class="flex-1">
-    <a class="btn btn-ghost text-xl">Nakajhi Blog</a>
+    <a class="btn btn-ghost text-xl" href="/">Nakajhi Blog</a>
   </div>
   <div class="flex-none">
     <nav>
       <ul class="menu menu-horizontal px-1">
-        <li><a href="/">ホーム</a></li>
-        <li><a href="/posts/1">投稿</a></li>
+        <li><a href="/profile">プロフィール</a></li>
         <li><a href="/contact">お問い合わせ</a></li>
 
         <!-- <li>
