--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,18 +18,10 @@ const { title } = Astro.props;
     <Header />
     <div class="py-24 px-6">
       <h2 class="text-center text-6xl font-mono mb-12">{title}</h2>
-      <div class="grid grid-cols-4 gap-4 min-h-screen">
-        <div class="col-start-1 col-span-1">
-          <slot name="aside1" /><!-- ここにサイドバーが挿入される -->
-        </div>
-        <div class="col-start-2 col-span-2 row-span-full">
-          <slot /><!-- ここにコンテンツが挿入される -->
-        </div>
-        <div class="col-span-1">
-          <slot name="aside2" /><!-- ここにサイドバーが挿入される -->
-        </div>
-      </div>
+      <!-- <slot name="aside-left" />ここにサイドバーが挿入される -->
+      <slot />
+      <!-- <slot name="aside-right" />ここにサイドバーが挿入される -->
     </div>
-    <Footer />
   </body>
+  <Footer />
 </html>
