ページネーションの実装とスタイル修正

--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -3,7 +3,7 @@ import { format } from "date-fns";
 type Props = {
   href: string;
   title: string;
-  imgUrl: string;
+  imgUrl?: string;
   tags: string[];
   updatedAt: Date;
 };
