--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <Header />
-    <div class="py-24 px-6">
+    <div class="py-24 px-0 sm:px-6">
       <h2 class="text-center text-6xl font-mono mb-12">{title}</h2>
       <!-- <slot name="aside-left" />ここにサイドバーが挿入される -->
       <slot />
