--- a/src/layouts/components/Header.astro
+++ b/src/layouts/components/Header.astro
@@ -1,22 +1,54 @@
-<div class="navbar bg-gray-200 sticky top-0 z-50 opacity-95">
-  <div class="flex-1">
-    <a class="btn btn-ghost text-xl" href="/">Nakajhi Blog</a>
-  </div>
-  <div class="flex-none">
-    <nav>
-      <ul class="menu menu-horizontal px-1">
-        <li><a href="/profile">プロフィール</a></li>
-        <li><a href="/contact">お問い合わせ</a></li>
+---
+const navItems = [
+  { name: "プロフィール", href: "/profile" },
+  { name: "お問い合わせ", href: "/contact" },
+];
+---
 
-        <!-- <li>
-          <details>
-            <summary> Parent </summary>
-            <ul class="p-2 bg-base-100 rounded-t-none">
-              <li><a>Link 1</a></li>
-              <li><a>Link 2</a></li>
-            </ul>
-          </details>
-        </li> -->
+<div class="navbar bg-gray-200 sticky top-0 z-50 opacity-95">
+  <div class="dropdown md:hidden">
+    <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-5 w-5"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke="currentColor"
+        ><path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h7"></path></svg
+      >
+    </div>
+    <nav>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+      >
+        {
+          navItems.map(({ href, name }) => (
+            <li class="my-1">
+              <a href={href}>{name}</a>
+            </li>
+          ))
+        }
+      </ul>
+    </nav>
+  </div>
+  <div class="flex-1">
+    <a class="btn btn-ghost text-xl px-4" href="/">Nakajhi Blog</a>
+  </div>
+  <div class="flex-none hidden md:block">
+    <nav>
+      <ul class="menu menu-horizontal">
+        {
+          navItems.map(({ href, name }) => (
+            <li>
+              <a href={href}>{name}</a>
+            </li>
+          ))
+        }
       </ul>
     </nav>
   </div>
