--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,11 +2,11 @@
 import Header from "./components/Header.astro";
 import Footer from "./components/Footer.astro";
 
-type Props = {
-  title: string;
-};
+// type Props = {
+//   title: string;
+// };
 
-const { title } = Astro.props;
+// const { title } = Astro.props;
 ---
 
 <html lang="ja" data-theme="emerald">
@@ -17,7 +17,6 @@ const { title } = Astro.props;
   <body>
     <Header />
     <div class="py-24 px-0 sm:px-6">
-      <h2 class="text-center text-6xl font-mono mb-12">{title}</h2>
       <!-- <slot name="aside-left" />ここにサイドバーが挿入される -->
       <slot />
       <!-- <slot name="aside-right" />ここにサイドバーが挿入される -->
