--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -19,7 +19,7 @@ console.log(isBackDisabled, page.url.prev);
 
 <Layout title="ブログ記事一覧">
   <div
-    class="grid grid-cols-1 sm:gap-4 min-h-screen sm:grid-cols-3 xl:grid-cols-4"
+    class="grid grid-cols-1 sm:gap-4 min-h-screen sm:grid-cols-3 xl:grid-cols-4 max-w-[2000px] mx-auto"
   >
     <div class="col-start-3 col-span-1 xl:col-start-1">
       <!-- ここにサイドバーが挿入される -->
