--- a/src/pages/posts/[postId].astro
+++ b/src/pages/posts/[postId].astro
@@ -1,6 +1,6 @@
 ---
 import type { GetStaticPaths, GetStaticPathsResult } from "astro";
-import { Image } from "astro:assets";
+// import { Image } from "astro:assets";
 import { format } from "date-fns";
 import { fetchPostsData } from "@lib/spearly";
 import Layout from "@layouts/Layout.astro";
@@ -47,13 +47,14 @@ console.log(Astro.props);
     <main
       class="w-full lg:w-[calc(100%_-_330px)] flex flex-wrap flex-col justify-center border-2 border-white"
     >
-      <Image
+      <!-- <Image
         class="h-[30vh] object-cover"
         src={img}
         width={870}
         height={400}
         alt="記事のサムネイル画像"
-      />
+      /> -->
+      <img class="h-[30vh] object-cover" src={img} alt="記事のサムネイル画像" />
       <div class="px-5 sm:px-10">
         <h1 class="mt-10 text-4xl font-bold">{title}</h1>
         <div class="mt-10">
