Asideコンポーネント修正

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,3 +24,9 @@ import Footer from "./components/Footer.astro";
   </body>
   <Footer />
 </html>
+
+<style>
+  body {
+    overflow-wrap: anywhere;
+  }
+</style>
