preタグがはみ出す問題、パンくずの修正

--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -3,7 +3,9 @@ import Profile from "@components/Profile.astro";
 import TagsList from "@components/TagsList.astro";
 ---
 
-<aside class="w-full max-w-[290px] flex flex-col border-2 border-white gap-4">
+<aside
+  class="w-full sm:max-w-[290px] flex flex-col border-2 border-white gap-4"
+>
   <Profile />
   <TagsList />
   <!-- <div class="w-full h-96 border-2 border-white">
