--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,8 +25,9 @@ import Footer from "./components/Footer.astro";
   <Footer />
 </html>
 
-<style>
-  body {
+<style is:global>
+  pre {
     overflow-wrap: anywhere;
+    white-space: pre-wrap;
   }
 </style>
