Asideコンポーネントのスタイル修正

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,4 +30,7 @@ import Footer from "./components/Footer.astro";
     overflow-wrap: anywhere;
     white-space: pre-wrap;
   }
+  iframe {
+    max-width: 100%;
+  }
 </style>
