--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -4,7 +4,7 @@ import TagsList from "@components/TagsList.astro";
 ---
 
 <aside
-  class="w-full sm:max-w-[290px] flex flex-col border-2 border-white gap-4"
+  class="w-full lg:max-w-[290px] flex flex-col border-2 border-white gap-4"
 >
   <Profile />
   <TagsList />
