--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ const navItems = [
     </nav>
   </div>
   <div class="flex-1">
-    <a class="btn btn-ghost text-xl px-4" href="/">Nakajhi Blog</a>
+    <a class="btn btn-ghost text-xl px-4" href="/">Nakaji Blog</a>
   </div>
   <div class="flex-none hidden md:block">
     <nav>
