--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -3,6 +3,8 @@ import Layout from "@layouts/Layout.astro";
 import PostCard from "@components/PostCard.astro";
 import { fetchPostsData } from "@lib/spearly";
 import type { GetStaticPaths } from "astro";
+import Profile from "@components/Profile.astro";
+import TagsList from "@components/TagsList.astro";
 
 export const getStaticPaths = (async ({ paginate }) => {
   const res = await fetchPostsData();
@@ -19,16 +21,18 @@ console.log(isBackDisabled, page.url.prev);
 
 <Layout title="ブログ記事一覧">
   <div
-    class="grid grid-cols-1 sm:gap-4 min-h-screen sm:grid-cols-3 xl:grid-cols-4 max-w-[2000px] mx-auto"
+    class="grid grid-cols-1 min-h-screen sm:grid-cols-[1fr,250px] sm:grid-rows-[auto,1fr] xl:grid-cols-[250px,1fr,250px] 2xl:grid-cols-[300px,1fr,300px] max-w-[2000px] mx-auto gap-8 md:gap-x-4 xl:gap-8"
   >
-    <div class="col-start-3 col-span-1 xl:col-start-1">
-      <!-- ここにサイドバーが挿入される -->
+    <div
+      class="row-start-2 col-start-1 sm:row-start-1 sm:col-start-2 col-span-1 xl:col-start-1"
+    >
+      <Profile />
     </div>
     <div
-      class="col-start-1 col-span-2 xl:col-start-2 xl:col-span-2 row-span-full"
+      class="col-start-1 col-span-1 xl:col-start-2 xl:col-span-1 row-span-full"
     >
       <main
-        class="w-full flex flex-wrap flex-row gap-8 m-auto justify-center border-2 border-white p-6"
+        class="w-full flex flex-wrap flex-row bg-gray-200 xl:p-6 gap-4 2xl:gap-8 md:gap-4 p-5"
       >
         {
           page.data.map(({ values, attributes }) => (
@@ -42,7 +46,7 @@ console.log(isBackDisabled, page.url.prev);
           ))
         }
       </main>
-      <div class="join flex justify-center mt-8">
+      <div class="join flex justify-center mb-2 sm:mb-0 mt-8">
         <button class="join-item btn btn-lg" disabled={isBackDisabled}
           ><a href={page.url.prev}>«</a></button
         >
@@ -51,8 +55,11 @@ console.log(isBackDisabled, page.url.prev);
           ><a href={page.url.next}>»</a></button
         >
       </div>
-
-      <div class="col-span-1"><!-- ここにサイドバーが挿入される --></div>
+    </div>
+    <div
+      class="row-start-3 col-start-1 sm:col-start-2 col-span-1 sm:row-start-2 xl:col-start-3 xl:row-start-1"
+    >
+      <TagsList />
     </div>
   </div>
 </Layout>
