--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -12,11 +12,11 @@ const { href, title, imgUrl, updatedAt, tags } = Astro.props;
 ---
 
 <div
-  class="card w-full md:w-[calc((100%_-_48px)_/_2)] bg-base-100 shadow-xl cursor-pointer"
+  class="card w-full md:w-[calc((100%_-_(16px_*_1))_/_2)] 2xl:w-[calc((100%_-_(32px_*_2))_/_3)] bg-base-100 shadow-xl cursor-pointer rounded-lg"
 >
   <a href={href}>
     <figure>
-      <img src={imgUrl} alt="Shoes" />
+      <img class="rounded-t-lg object-cover" src={imgUrl} alt="Shoes" />
     </figure>
     <div class="card-body p-4 min-h-36">
       <h2 class="card-title">
