--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import Header from "./components/Header.astro";
-import Footer from "./components/Footer.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 
 // type Props = {
 //   title: string;
@@ -17,9 +17,11 @@ import Footer from "./components/Footer.astro";
   <body>
     <Header />
     <div class="py-24 px-0 sm:px-6">
-      <!-- <slot name="aside-left" />ここにサイドバーが挿入される -->
+      <!-- ここにサイドバーが挿入される -->
+      <slot name="aside-left" />
+      <!-- ここにサイドバーが挿入される -->
+      <slot name="aside-right" />
       <slot />
-      <!-- <slot name="aside-right" />ここにサイドバーが挿入される -->
     </div>
   </body>
   <Footer />
