--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -4,7 +4,9 @@ import profileImg from "../static/images/profile.png";
 import AsideCard from "./AsideCard.astro";
 ---
 
-<AsideCard title="プロフィール">
+<div class="w-full p-5 bg-gray-200 min-h-[100px]">
+  <div class="text-center text-2xl mb-5">プロフィール</div>
+
   <Image
     class="rounded-full w-[160px] mx-auto"
     src={profileImg}
@@ -13,4 +15,4 @@ import AsideCard from "./AsideCard.astro";
     height={250}
   />
   <div><p class="text-center text-xl mt-2">経歴</p><p>本文</p></div>
-</AsideCard>
+</div>
