--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -4,7 +4,7 @@ import PostCard from "@components/PostCard.astro";
 import { fetchPostsData } from "@lib/spearly";
 import type { GetStaticPaths } from "astro";
 import Profile from "@components/Profile.astro";
-import TagsList from "@components/TagsList.astro";
+import TagList from "@components/TagList.astro";
 
 export const getStaticPaths = (async ({ paginate }) => {
   const res = await fetchPostsData();
@@ -16,7 +16,14 @@ export const getStaticPaths = (async ({ paginate }) => {
 const { page } = Astro.props;
 const isForwardDisabled = page.url.next ? false : true;
 const isBackDisabled = page.url.prev ? false : true;
-console.log(isBackDisabled, page.url.prev);
+console.log(
+  page.data.map(({ values }) => values.tag).flatMap((tagList) => tagList),
+);
+const duplicatedTagList = page.data
+  .map(({ values }) => values.tag as string[])
+  .flatMap((tagList) => tagList);
+
+const tagList = [...new Set(duplicatedTagList)];
 ---
 
 <Layout title="ブログ記事一覧">
@@ -59,7 +66,7 @@ console.log(isBackDisabled, page.url.prev);
     <div
       class="row-start-3 col-start-1 sm:col-start-2 col-span-1 sm:row-start-2 xl:col-start-3 xl:row-start-1"
     >
-      <TagsList />
+      <TagList tagList={tagList} />
     </div>
   </div>
 </Layout>
