画像の読み込みエラー修正

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -8,7 +8,7 @@ import profileImg from "../static/images/profile.png";
 
   <Image
     class="rounded-full w-[160px] mx-auto"
-    src={profileImg}
+    src={profileImg.src}
     alt="プロフィール画像"
     width={250}
     height={250}
