--- a/src/pages/category/[tag]/[...page].astro
+++ b/src/pages/category/[tag]/[...page].astro
@@ -55,7 +55,7 @@ const isBackDisabled = page.url.prev ? false : true;
               title={values.title as string}
               imgUrl={values.image as string}
               tags={values.tag as string[]}
-              href={`posts/${attributes.publicUid}`}
+              href={`/posts/${attributes.publicUid}`}
               updatedAt={attributes.updatedAt}
             />
           ))
