--- a/src/components/TagList.astro
+++ b/src/components/TagList.astro
@@ -12,7 +12,7 @@ const { tagList } = Astro.props;
     {
       tagList.map((tag) => (
         <li class="badge badge-primary">
-          <a href={`/category/${tag}`}>{tag}</a>
+          <a href={`/tags/${tag}`}>{tag}</a>
         </li>
       ))
     }
