--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,17 +2,18 @@
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
-// type Props = {
-//   title: string;
-// };
+type Props = {
+  title?: string;
+};
 
-// const { title } = Astro.props;
+const { title } = Astro.props;
 ---
 
 <html lang="ja" data-theme="emerald">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>{title}</title>
   </head>
   <body>
     <Header />
