--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -25,7 +25,7 @@ const duplicatedTagList = page.data
 const uniqueTagList = [...new Set(duplicatedTagList)];
 ---
 
-<Layout title="ブログ記事一覧">
+<Layout title="ホーム">
   <div
     class="grid grid-cols-1 min-h-screen sm:grid-cols-[1fr,250px] sm:grid-rows-[auto,1fr] xl:grid-cols-[250px,1fr,250px] 2xl:grid-cols-[300px,1fr,300px] max-w-[2000px] mx-auto gap-8 md:gap-x-4 xl:gap-8"
   >
