--- a/src/pages/posts/[postId].astro
+++ b/src/pages/posts/[postId].astro
@@ -41,14 +41,14 @@ export const getStaticPaths: GetStaticPaths = async () => {
 const { title, createdAt, updatedAt, img, tags, body, tagList } = Astro.props;
 ---
 
-<Layout>
+<Layout title="記事詳細">
   <div
     class="relative flex flex-col lg:flex-row my-0 m-auto max-w-7xl px-0 sm:px-10 justify-between gap-10"
   >
     <div class="absolute top-[-40px] left-2 sm:left-10 text-sm breadcrumbs">
       <ul>
         <li><a href="/">ホーム</a></li>
-        <li>投稿詳細</li>
+        <li>記事詳細</li>
       </ul>
     </div>
     <main
@@ -91,9 +91,7 @@ const { title, createdAt, updatedAt, img, tags, body, tagList } = Astro.props;
       </div>
     </main>
 
-    <aside
-      class="w-full lg:max-w-[290px] flex flex-col border-2 border-white gap-4"
-    >
+    <aside class="w-full lg:max-w-[290px] flex flex-col gap-4">
       <Profile />
       <TagList tagList={tagList} />
       <!-- <div class="w-full h-96 border-2 border-white">
