--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -2,6 +2,6 @@
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout title="Profile">
+<Layout title="プロフィール">
   <div>profileページ</div>
 </Layout>
