--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <Header />
-    <div class="py-24 px-0 sm:px-6">
+    <div class="py-20 px-0 sm:px-6 min-h-[calc(100vh_-_224px)]">
       <!-- ここにサイドバーが挿入される -->
       <slot name="aside-left" />
       <!-- ここにサイドバーが挿入される -->
