--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,16 +4,51 @@ import Layout from "@layouts/Layout.astro";
 
 <Layout title="お問い合わせ">
   <div class="w-full min-h-[80vh]">
-    <form id="contact-form">
+    <form id="contact-form" class="sm:w-96 m-auto w-full px-4">
       <input type="hidden" name="contact_number" />
-      <label>お名前</label>
-      <input type="text" name="user_name" />
-      <label>メール</label>
-      <input type="email" name="user_email" />
-      <label>お問い合わせ内容</label>
-      <textarea name="message"></textarea>
-      <input type="submit" value="
-        送信" />
+      <div>
+        <label
+          class="block after:content-['*'] after:text-red-400 after:align-middle"
+          for="name">お名前</label
+        >
+        <input
+          type="text"
+          id="name"
+          name="user_name"
+          placeholder="お名前を入力してください"
+          required="true"
+          class="input input-bordered w-full block mt-1"
+        />
+      </div>
+      <div>
+        <label
+          class="block w-full mt-4 after:content-['*'] after:text-red-400"
+          for="email"
+          >メール
+        </label>
+        <input
+          type="email"
+          id="email"
+          name="user_email"
+          required="true"
+          placeholder="メールアドレスを入力してください"
+          class="input input-bordered w-full block mt-1"
+        />
+      </div>
+      <div>
+        <label
+          class="block mt-4 after:content-['*'] after:text-red-400 after:align-middle"
+          for="message">お問い合わせ内容</label
+        >
+        <textarea
+          id="message"
+          name="message"
+          required="true"
+          rows="4"
+          class="textarea textarea-bordered block w-full mt-1"></textarea>
+      </div>
+
+      <button class="btn btn-primary mt-10">送信</button>
     </form>
   </div>
 </Layout>
